--- a/SASS/index.css
+++ b/SASS/index.css
@@ -3,6 +3,10 @@ body {
   font-family: roboto;
 }
 
+a {
+  text-decoration: none;
+}
+
 header {
   display: flex;
   flex-direction: column;
@@ -16,9 +20,12 @@ header .header__localisation {
   padding: 10px 0px 10px 0px;
   width: 100%;
   text-align: center;
-  font-size: 30px;
+  font-size: 27px;
   color: #353535;
   font-weight: 400;
+}
+header .header__localisation i {
+  padding-right: 40px;
 }
 header .header__banner {
   background-color: #f6f6f6;
@@ -55,21 +62,78 @@ header .header__banner--button--link {
   align-items: center;
 }
 .filters .filters__title {
-  font-size: 30px;
+  font-size: 40px;
   display: flex;
-  justify-content: flex-start;
+  align-self: flex-start;
+  padding-left: 10%;
 }
 .filters .filters__contener {
   display: flex;
   flex-direction: column;
 }
 .filters__contener--link {
+  display: flex;
+  justify-content: center;
   text-decoration: none;
   color: black;
-  padding: 40px 40px;
+  padding: 60px 40px;
   border-radius: 50px;
   background-color: #f6f6f6;
   font-size: 36px;
   margin-bottom: 30px;
+  width: 750px;
+}
+.filters__contener--link i {
+  padding-right: 40px;
+}
+
+.restaurants {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #f6f6f6;
+}
+.restaurants .restaurants__title {
+  display: flex;
+  align-self: flex-start;
+  padding-left: 8%;
+  font-size: 50px;
+}
+.restaurants .restaurants__cards {
+  display: flex;
+  margin-top: 33px;
+}
+.restaurants__cards--card {
+  width: 900px;
+  background-color: #ffffff;
+  border-radius: 40px;
+  filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+  display: flex;
+  flex-direction: column;
+}
+.restaurants__cards--card-img {
   width: 100%;
+  border-top-left-radius: 40px;
+  border-top-right-radius: 40px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.restaurants__cards--card-content {
+  width: 100%;
+  padding-left: 30px;
+}
+.restaurants__cards--card-content-title {
+  color: black;
+  font-size: 35px;
+}
+.restaurants__cards--card-content-subtitle {
+  color: black;
+  font-size: 25px;
+}
+.restaurants__cards--card-like {
+  display: flex;
+  align-self: flex-end;
+  position: relative;
+  bottom: 90px;
+  right: 70px;
 }/*# sourceMappingURL=index.css.map */
