--- a/SASS/index.scss
+++ b/SASS/index.scss
@@ -11,22 +11,28 @@ body{
     margin: 0px;
     font-family: roboto;
 }
+a {
+    text-decoration: none;
+}
 header{
     display: flex;
     flex-direction: column;
     align-items: center;
         .header__logo {
             padding: 50px;
-}
+            }
         .header__localisation {
             background-color: #eaeaea;
             padding: 10px 0px 10px 0px;
             width: 100%;
             text-align: center;
-            font-size: 30px;
+            font-size: 27px;
             color: #353535;
             font-weight: 400;
             }
+        .header__localisation i {
+            padding-right: 40px;
+        }
         .header__banner {
             background-color: #f6f6f6 ;
             width: 100%;
@@ -47,14 +53,14 @@ header{
             &--button {
                 padding: 10px;
             }
-            &--button--link {
-                text-decoration: none;
-                background:linear-gradient(-161deg, #9356DC, #FF79DA);
-                padding: 40px 40px;
-                border-radius: 60px;
-                color: white;
-               
-            }
+                &--button--link {
+                    text-decoration: none;
+                    background:linear-gradient(-161deg, #9356DC, #FF79DA);
+                    padding: 40px 40px;
+                    border-radius: 60px;
+                    color: white;
+                
+                }
         }
 }
 .filters {
@@ -62,23 +68,103 @@ header{
     flex-direction: column;
     align-items: center;
     .filters__title {
-        font-size: 30px;
+        font-size: 40px;
         display: flex;
-        justify-content: flex-start;
+        align-self: flex-start;
+        padding-left: 10%;
     }
     .filters__contener {
         display: flex;
         flex-direction: column;
     }
-    &__contener--link {
-        text-decoration: none;
-        color: black;
-        padding: 40px 40px;
-        border-radius: 50px;
-        background-color: #f6f6f6;
-        font-size: 36px;
-        margin-bottom: 30px;
-        width: 100%;
-       
-    }
+        &__contener--link {
+            display: flex;
+            justify-content: center;
+            text-decoration: none;
+            color: black;
+            padding: 60px 40px;
+            border-radius: 50px;
+            background-color: #f6f6f6;
+            font-size: 36px;
+            margin-bottom: 30px;
+            width: 750px;
+        }
+            &__contener--link i {
+                padding-right: 40px;
+            }
 }
+.restaurants {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f6f6f6;
+        .restaurants__title {
+            display: flex;
+            align-self: flex-start;
+            padding-left: 8%;
+            font-size: 50px;
+        }
+        .restaurants__cards {
+            display: flex;
+            margin-top: 33px;
+        }
+        &__cards--card { 
+            width:900px;
+            background-color: #ffffff;
+            border-radius: 40px;
+            filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+            display: flex;
+            flex-direction: column;
+                &-img {
+                    width: 100%;
+                    border-top-left-radius:40px;
+                    border-top-right-radius: 40px; 
+                    object-fit: cover;   
+                }
+                &-content {
+                    width: 100%;
+                    padding-left: 30px;
+                    &-title {
+                        color: black;
+                        font-size: 35px;
+                    }
+                    &-subtitle {
+                        color: black;
+                        font-size: 25px;
+                    }
+                    
+                }
+            &-like {
+                position: relative;
+                top: 60px;
+            }    
+        }
+        
+}
+// .heberg-cards .card {
+//     display: flex;
+//     margin-top: 33px;
+//     flex-direction: column;
+//     width: 230px;
+// }
+// .heberg-cards img {
+//     width: 100%;
+//     height: 120px;
+//     border-top-left-radius: 20px;
+//     border-top-right-radius: 20px;
+// }
+
+// .heberg-cards .card-content{
+//     width: 100%;
+//     padding-left: 15px;
+//     display: flex;
+//     flex-direction: column;
+//     margin-top: 7px;
+    
+// }
+
+// .heberg-cards .card-title {
+//     margin-top: 1px;
+//     margin-bottom: 4px;
+    
+// }
