--- a/SASS/index.css
+++ b/SASS/index.css
@@ -1,6 +1,7 @@
 body {
   margin: 0px;
   font-family: roboto;
+  background-color: #ffffff;
 }
 
 a {
@@ -32,6 +33,7 @@ header .header__banner {
   width: 100%;
   padding-bottom: 100px;
   padding-top: 50px;
+  padding-bottom: 150px;
   text-align: center;
 }
 header .header__banner--title {
@@ -41,16 +43,16 @@ header .header__banner--title {
 header .header__banner--paragraph {
   color: #353535;
   font-weight: 300;
-  padding: 0% 10% 0% 10%;
+  padding: 0% 8% 0% 8%;
   font-size: 25px;
-  padding-bottom: 30px;
+  padding-bottom: 70px;
 }
 header .header__banner--button {
   padding: 10px;
 }
 header .header__banner--button--link {
   text-decoration: none;
-  background: linear-gradient(-161deg, #9356DC, #FF79DA);
+  background: linear-gradient(50deg, #9356DC, #FF79DA);
   padding: 40px 40px;
   border-radius: 60px;
   color: white;
@@ -60,16 +62,31 @@ header .header__banner--button--link {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 200px;
 }
 .filters .filters__title {
   font-size: 40px;
   display: flex;
   align-self: flex-start;
-  padding-left: 10%;
+  padding-left: 5%;
+  padding-top: 90px;
 }
 .filters .filters__contener {
   display: flex;
   flex-direction: column;
+}
+.filters__contener--button {
+  display: flex;
+  align-self: flex-start;
+  position: relative;
+  top: 120px;
+  right: 30px;
+  border-radius: 50%;
+  padding: 15px 26px;
+  color: white;
+  background-color: #9356DC;
+  border: #9356DC;
+  font-size: 35px;
 }
 .filters__contener--link {
   display: flex;
@@ -80,11 +97,12 @@ header .header__banner--button--link {
   border-radius: 50px;
   background-color: #f6f6f6;
   font-size: 36px;
-  margin-bottom: 30px;
   width: 750px;
+  box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.2);
 }
 .filters__contener--link i {
-  padding-right: 40px;
+  padding-right: 30px;
+  color: #7E7E7E;
 }
 
 .restaurants {
@@ -98,10 +116,11 @@ header .header__banner--button--link {
   align-self: flex-start;
   padding-left: 8%;
   font-size: 50px;
+  margin-top: 50px;
 }
 .restaurants .restaurants__cards {
   display: flex;
-  margin-top: 33px;
+  flex-direction: column;
 }
 .restaurants__cards--card {
   width: 900px;
@@ -110,9 +129,11 @@ header .header__banner--button--link {
   filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
   display: flex;
   flex-direction: column;
+  margin-bottom: 50px;
 }
 .restaurants__cards--card-img {
   width: 100%;
+  height: 450px;
   border-top-left-radius: 40px;
   border-top-right-radius: 40px;
   -o-object-fit: cover;
@@ -120,20 +141,62 @@ header .header__banner--button--link {
 }
 .restaurants__cards--card-content {
   width: 100%;
-  padding-left: 30px;
+  padding-left: 70px;
+  height: 170px;
+  position: relative;
 }
 .restaurants__cards--card-content-title {
   color: black;
-  font-size: 35px;
+  font-size: 40px;
+  margin-bottom: -20px;
+  margin-top: 30px;
 }
 .restaurants__cards--card-content-subtitle {
   color: black;
-  font-size: 25px;
+  font-size: 35px;
 }
 .restaurants__cards--card-like {
   display: flex;
   align-self: flex-end;
-  position: relative;
-  bottom: 90px;
-  right: 70px;
+  position: absolute;
+  bottom: 45px;
+  right: 60px;
+}
+.restaurants__cards--card-like i {
+  font-size: 50px;
+  color: black;
+  transition-property: all;
+  transition: background-color 1000ms ease-in-out;
+}
+.restaurants__cards--card-like i:hover {
+  font-weight: 900;
+  color: transparent;
+  background: linear-gradient(50deg, #9356DC, #FF79DA);
+  -webkit-background-clip: text;
+          background-clip: text;
+}
+
+footer {
+  background-color: #353535;
+  width: 100%;
+  padding-left: 40px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+footer .footer__logo {
+  color: white;
+  width: 200px;
+  padding-bottom: 10px;
+}
+footer .footer__links {
+  display: flex;
+  flex-direction: column;
+}
+footer .footer__links a {
+  color: white;
+  padding-top: 20px;
+  font-size: 30px;
+}
+footer .footer__links i {
+  padding-right: 10px;
 }/*# sourceMappingURL=index.css.map */
