--- a/SASS/index.scss
+++ b/SASS/index.scss
@@ -15,13 +15,120 @@ body{
 a {
     text-decoration: none;
 }
+
+// loader
+.loader {
+    background: #8de4db;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    inset: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 4;
+    animation: desapear;
+    animation-duration: 4800ms;
+    animation-fill-mode: forwards;
+    &__Wrapper {
+        height: 90px;
+        overflow: hidden;
+        &--Inner {
+            position: relative;
+            animation-name: languageSwitch;
+            animation-duration: 4000ms;
+            animation-fill-mode: forwards;
+            animation-delay: 1s;
+            display: flex;
+            align-items:center;
+            flex-direction:column;
+        &-txt {
+            font-family: roboto;
+            font-size: 52px;
+            font-weight: 900;
+            color: white;
+            height: 90px;
+            display: flex;
+            align-items: center;
+     }
+        &-txt-OMF {
+            font-family: "Shrikhand", serif;
+            font-size: 52px;
+            font-weight: 900;
+            color: white;
+            height: 90px;
+            display: flex;
+            align-items: center;
+        }
+    }
+    }
+    
+  }
+  
+    /* animation keyframes */
+  
+@keyframes desapear {
+    0% {
+       visibility: visible;
+    }
+    100% {
+        visibility: hidden;
+    }
+}
+
+    @keyframes languageSwitch {
+    0% {
+      bottom: 0;
+    }
+    15% {
+      bottom: 0;
+    }
+    20% {
+      bottom: 90px;
+    }
+    35% {
+      bottom: 90px;
+    }
+    40% {
+      bottom: 180px;
+    }
+    55% {
+      bottom: 180px;
+    }
+    60% {
+      bottom: 270px;
+    }
+    75% {
+      bottom: 270px;
+    }
+    80% {
+      bottom: 360px;
+    }
+    95% {
+      bottom: 360px;
+    }
+    100% {
+      bottom: 450px;
+    }
+  }
+  
+
 header{
     display: flex;
     flex-direction: column;
     align-items: center;
         .header__logo {
-            padding: 50px;
+            box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+            z-index: 3;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            &--img {
+                padding: 50px;
+               
             }
+        }
+        
         .header__localisation {
             background-color: #eaeaea;
             padding: 10px 0px 10px 0px;
@@ -30,6 +137,9 @@ header{
             font-size: 27px;
             color: #353535;
             font-weight: 400;
+            box-shadow: 0px 14px 11px -6px rgba(0,0,0,0.45);
+            z-index: 2;
+
             }
         .header__localisation i {
             padding-right: 40px;
@@ -37,10 +147,11 @@ header{
         .header__banner {
             background-color: #f6f6f6 ;
             width: 100%;
-            padding-bottom: 100px;
             padding-top: 50px;
             padding-bottom: 150px;
             text-align: center;
+           
+            
             &--title {
                 padding: 0% 15% 0% 15%;
                 font-size: 55px;
@@ -58,9 +169,15 @@ header{
                 &--button--link {
                     text-decoration: none;
                     background:linear-gradient(50deg, #9356DC, #FF79DA);
+                    opacity: 1;
                     padding: 40px 40px;
                     border-radius: 60px;
                     color: white;
+                    box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.2);
+                    &:hover {
+                        opacity: 0.8;
+                        box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.4);
+                    }
                 
                 }
         }
@@ -80,6 +197,9 @@ header{
     .filters__contener {
         display: flex;
         flex-direction: column;
+        &:hover .filters__contener--link i {
+            color: #9356DC;
+        }
     }
         &__contener--button {
             display: flex;
@@ -93,8 +213,11 @@ header{
             background-color: #9356DC;
             border: #9356DC;
             font-size: 35px;
+            z-index: 1;
+            
         }
-        &__contener--link {
+        &__contener--link { &-1,&-2,&-3 {
+
             display: flex;
             justify-content: center;
             text-decoration: none;
@@ -105,12 +228,23 @@ header{
             font-size: 36px;
             width: 750px;
             box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.2);
-        }
-            &__contener--link i {
-                padding-right: 30px;
-                color: #7E7E7E;
+            opacity: 1;
+            &:hover {
+                opacity: 0.8;
+                box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.4);
             }
+            &:hover i {
+                color: #9356DC;
+            }
+            }
+        }
+        &__contener--link { &-1 i,&-2 i,&-3  i {
+            padding-right: 30px;
+            color: #7E7E7E;
+        }
+    }
 }
+
 .restaurants {
     display: flex;
     flex-direction: column;
@@ -172,13 +306,13 @@ header{
                 font-size: 50px;
                 color: black;
                 transition-property: all;
-                transition: background-color 1000ms ease-in-out;
+                transition: 1100ms;
                 &:hover {
                     font-weight: 900;
                     color: transparent;
                     background:linear-gradient(50deg, #9356DC, #FF79DA);
                     background-clip: text;
-                    
+                  
                 }
             }
         }
@@ -190,21 +324,135 @@ footer {
     padding-left: 40px;
     padding-top: 60px;
     padding-bottom: 60px;
-    .footer__logo {
+    .footer__content--logo {
         color: white;
-        width: 200px;
-        padding-bottom: 10px;
+        font-family: "Shrikhand", serif;
+        font-size: 40px;
     }
-    .footer__links {
+    .footer__content--links {
         display: flex;
         flex-direction: column;
     }
-    .footer__links a {
+    .footer__content--links a {
         color: white;
         padding-top: 20px;
         font-size: 30px;
     }
-    .footer__links i {
+    .footer__content--links i {
         padding-right: 10px;
     }
+}
+
+@media (min-width: 1440px) {
+    
+    header .header__banner--button--link {
+        padding: 20px 50px;
+        border-radius: 60px;
+      }
+    header .header__banner {
+        padding-top: 40px;
+        padding-bottom: 50px;
+        text-align: center;
+
+      }
+    header  .header__localisation {
+       box-shadow: none;
+
+        }
+    header  .header__logo {
+            box-shadow: none;
+    }
+    .filters {
+        margin-bottom: 100px;
+        .filters__title {
+            font-size: 24px;
+            padding-left: 12%;
+        }
+        .filters__contener {
+            display: flex;
+            flex-direction: row;
+        }
+            &__contener--button {
+                top: 30px;
+                left: 25px;
+                padding: 10px 15px;
+                font-size: 15px;
+            }
+            &__contener--link {&-1,&-2,&-3{
+                border-radius: 40px;
+                font-size: 20px;
+                width: 300px;
+                padding: 40px;
+            }
+        }
+    }
+    .restaurants {
+        padding-left: 50px;
+        padding-right: 50px;
+            .restaurants__title {
+                padding-left: 170px;
+                font-size: 30px;
+            }
+            .restaurants__cards {
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                justify-content: space-evenly;
+                align-items:center ;
+            }
+            &__cards--card { 
+                width:600px;
+                    &-img {
+                        height: 210px;
+                    }
+                    &-content {
+                        padding-left: 30px;
+                        height: 100px;
+                        &-title {
+                            font-size: 25px;
+                            margin-top: 15px;
+                        }
+                        &-subtitle {
+                            font-size: 25px;
+                        }
+                        
+                    }
+                &-like {
+                    bottom: 35px;
+                    right: 40px;
+                   
+                }    
+               
+            }
+            
+    } 
+    footer {
+        padding-top: 0px;
+    
+    }
+    footer .footer__content {
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: baseline;
+        padding-right: 90px;
+        justify-content: end;
+        padding-top: 40px;
+       
+    }  
+    footer .footer__content--logo{
+        font-size: 20px;
+        padding-left: 80px;
+        
+       
+        
+    }
+    footer .footer__content--links {
+        display: flex;
+        flex-direction: row;
+        gap: 50px;
+    }
+    footer .footer__content--links a {
+        font-size: 20px;
+        padding: 0px;
+      }
 }
